--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,19 @@
                     <td>slice:1:5</td>
                     <td>{{arreglo | slice:1:5}}</td>
                 </tr>
+
+                <tr>
+                    <td>{{PI}}</td>
+                    <td>number</td>
+                    <td>{{PI | number:'1.0-0'}}</td>
+                    <!--0-0, no quiero ningun decimal-->
+                </tr>
+
+                <tr>
+                    <td>{{PI}}</td>
+                    <td>number</td>
+                    <td>{{PI | number:'.0-2'}}</td>
+                </tr>
             </tbody>
         </table>
 
