--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,18 @@
                     <td>number</td>
                     <td>{{PI | number:'.0-2'}}</td>
                 </tr>
+
+                <tr>
+                    <td>{{porcentaje}}</td>
+                    <td>percent</td>
+                    <td>{{porcentaje | percent:'1.0'}}</td>
+                </tr>
+
+                <tr>
+                    <td>{{porcentaje}}</td>
+                    <td>percent</td>
+                    <td>{{porcentaje | percent:'2.2-2'}}</td>
+                </tr>
             </tbody>
         </table>
 
