--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,6 +66,18 @@
                     <td>percent</td>
                     <td>{{porcentaje | percent:'2.2-2'}}</td>
                 </tr>
+
+                <tr>
+                    <td>{{salario}}</td>
+                    <td>currency</td>
+                    <td>{{salario | currency:'EUR'}}</td>
+                </tr>
+
+                <tr>
+                    <td>{{salario}}</td>
+                    <td>currency:'CAD'</td>
+                    <td>{{salario | currency:'CAD':'symbol-narrow':'.0-0'}}</td>
+                </tr>
             </tbody>
         </table>
 
