--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,6 +78,41 @@
                     <td>currency:'CAD'</td>
                     <td>{{salario | currency:'CAD':'symbol-narrow':'.0-0'}}</td>
                 </tr>
+
+                <tr>
+                    <td>{{valorPromesa}}</td>
+                    <td>async</td>
+                    <td>{{valorPromesa | async}}</td>
+                </tr>
+
+                <tr>
+                    <td>{{fecha}}</td>
+                    <td>date</td>
+                    <td>{{fecha | date}}</td>
+                </tr>
+
+                <tr>
+                    <td>{{fecha}}</td>
+                    <td>date</td>
+                    <td>{{fecha | date:'medium'}}</td>
+                </tr>
+
+                <tr>
+                    <td>{{fecha}}</td>
+                    <td>date:'MMMM - dd</td>
+                    <td>{{fecha | date:'MMMM - dd'}}</td>
+                </tr>
+
+                <tr>
+                    <td>{{fecha}}</td>
+                    <td>date:'MMMM - dd':'':'{{ idioma }}'
+                        <br>
+                        <button (click)="idioma='es'" class="mr-1 btn btn-primary">Español</button>
+                        <button (click)="idioma='en'" class="mr-1 btn btn-secondary">Inglés</button>
+                        <button (click)="idioma='fr'" class="mr-1 btn btn-success">Francés</button>
+                    </td>
+                    <td>{{fecha | date:'MMMM - dd':'':idioma}}</td>
+                </tr>
             </tbody>
         </table>
 
