--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,9 +118,20 @@
                     </td>
                     <td>{{fecha | date:'MMMM - dd':'':idioma}}</td>
                 </tr>
+                <!--Contraseña-->
+                <tr>
+                    <td>{{nombre}}</td>
+                    <td>
+                        contrasena:{{activar}}
+                        <br>
+                        <button (click)="activar = !activar" class="btn btn-outline-primary">
+                            Activar/Desactivar
+                        </button>
+                    </td>
+                    <td>{{nombre | password:activar}}</td>
+                </tr>
             </tbody>
         </table>
-
 
         <h3>Slice <small>slice:1:4</small></h3>
         <ul class="list-group">
@@ -138,5 +149,16 @@
             </div>
         </div>
 
+    </div>
+</div>
+
+
+
+<h3 class="mt-4">DomSeguro</h3>
+<hr>
+<div class="row mb-5">
+    <div class="col">
+        <iframe width="560" height="315" [src]="videoUrl | domseguro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
     </div>
 </div>
